--- a/recipes_final.ipynb
+++ b/recipes_final.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<img src=\"recipe_banner.png\" alt=\"Banner\" width=\"1100\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Food.com Recipe Search Engine Project \n",
     "\n",
     "In this project, we will create a search engine for [food.com](food.com). The current search engine on the website works well for simple searches, but it does not work well with more complex and specific descriptions or dietary restrictions. The main goal is to create a search algorithm that can accomplish this better, by using TFIDF and a negative scoring methods. \n",
